# auto-dotnet

./: .gitignore  Makefile.am  README.md  configure.ac
m4/: mono.m4  nuget.m4
src/: Makefile.am
src/Library2/: Class2.cs  Makefile.am
src/Program/: Makefile.am  Program.cs
